Doplněno zakázání stejného statutu pro 1 hráče na 1 zápas a přidáno ošetření vyjímek